partial implementation of hash-based Security ID